website/i18n/ja/docusaurus-plugin-content-docs/version-2.x/cli.mdx
---
description: Docusaurusは、ウェブサイトの生成、配信、デプロイを支援するスクリプト一式を提供します。
---

# CLI

Docusaurusは、ウェブサイトの生成、配信、デプロイを支援するスクリプト一式を提供します。

ウェブサイトが初期設定されると、ウェブサイトのソースにDocusaurusスクリプトが含まれ、パッケージマネージャで起動できるようになります。

```json title="package.json"
{
  // ...
  "scripts": {
    "docusaurus": "docusaurus",
    "start": "docusaurus start",
    "build": "docusaurus build",
    "swizzle": "docusaurus swizzle",
    "deploy": "docusaurus deploy",
    "clear": "docusaurus clear",
    "serve": "docusaurus serve",
    "write-translations": "docusaurus write-translations",
    "write-heading-ids": "docusaurus write-heading-ids"
  }
}
```

## Docusaurus CLI commands {#docusaurus-cli-commands}

以下は、DocusaurusのCLIコマンドとその使い方の一覧です。

### `docusaurus start [siteDir]` {#docusaurus-start-sitedir}

Builds and serves a preview of your site locally with [Webpack Dev Server](https://webpack.js.org/configuration/dev-server).

#### Options {#options}

| 名前                            | Default     | 説明                                                                                                                                                  |
| ----------------------------- | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------- |
| `--port`                      | `3000`      | 開発サーバのポート番号を指定します。                                                                                                                                  |
| `--host`                      | `localhost` | 使用するホスト名を指定します。 For example, if you want your server to be accessible externally, you can use `--host 0.0.0.0`.                                     |
| `--hot-only`                  | `false`     | ビルドに失敗した場合のフォールバックとして、ページ更新なしでのホットモジュールリプレースメントを有効にします。 More information [here](https://webpack.js.org/configuration/dev-server/#devserverhotonly). |
| `--no-open`                   | `false`     | Do not open automatically the page in the browser.                                                                                                  |
| `--config`                    | `undefined` | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                                                         |
| `--poll [optionalIntervalMs]` | `false`     | 監視が機能しない環境では、ライブ・リロードの監視ではなく、ファイルのポーリングをフォールバックとして使用します。 More information [here](https://webpack.js.org/configuration/watch/#watchoptionspoll).     |
| `--no-minify`                 | `false`     | JS/CSSバンドルを最小化せずにウェブサイトをビルドします。                                                                                                                     |

:::info

一部の機能（アンカーリンクなど）は開発段階では動作しませんのでご注意ください。 本機能は本番環境では期待通りに動作します。

:::

:::info Development over network

When forwarding port 3000 from a remote server or VM (e.g. GitHub Codespaces), you can run the dev server on `0.0.0.0` to make it listen on the local IP.

```bash npm2yarn
npm run start -- --host 0.0.0.0
```

:::

#### Enabling HTTPS {#enabling-https}

証明書を取得する方法は複数あります。 We will use [mkcert](https://github.com/FiloSottile/mkcert) as an example.

1. Run `mkcert localhost` to generate `localhost.pem` + `localhost-key.pem`

2. Run `mkcert -install` to install the cert in your trust store, and restart your browser

3. 次のように、Docusaurus HTTPS環境変数を指定してアプリを起動：

```bash
HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem yarn start
```

4. Open `https://localhost:3000/`

### `docusaurus build [siteDir]` {#docusaurus-build-sitedir}

サイトを本番用にコンパイルします。

#### Options {#options-1}

| 名前                  | Default     | 説明                                                                                                                  |
| ------------------- | ----------- | ------------------------------------------------------------------------------------------------------------------- |
| `--bundle-analyzer` | `false`     | Analyze your bundle with the [webpack bundle analyzer](https://github.com/webpack-contrib/webpack-bundle-analyzer). |
| `--out-dir`         | `build`     | 現在のワークスペースからの相対パスで、新しい出力ディレクトリのフルパスです。                                                                              |
| `--config`          | `undefined` | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                         |
| `--no-minify`       | `false`     | JS/CSSバンドルを最小化せずにウェブサイトをビルドします。                                                                                     |

:::info

For advanced minification of CSS bundle, we use the [advanced cssnano preset](https://github.com/cssnano/cssnano/tree/master/packages/cssnano-preset-advanced) (along with additional several PostCSS plugins) and [level 2 optimization of clean-css](https://github.com/jakubpawlowicz/clean-css#level-2-optimizations). If as a result of this advanced CSS minification you find broken CSS, build your website with the environment variable `USE_SIMPLE_CSS_MINIFIER=true` to minify CSS with the [default cssnano preset](https://github.com/cssnano/cssnano/tree/master/packages/cssnano-preset-default). **Please [fill out an issue](https://github.com/facebook/docusaurus/issues/new?labels=bug%2C+needs+triage&template=bug.md) if you experience CSS minification bugs.**

You can skip the HTML minification with the environment variable `SKIP_HTML_MINIFICATION=true`.

:::

### `docusaurus swizzle [themeName] [componentName] [siteDir]` {#docusaurus-swizzle}

[Swizzle](./swizzling.mdx) a theme component to customize it.

```bash npm2yarn
npm run swizzle [themeName] [componentName] [siteDir]

# 例（現在のディレクトリであることを示すためsiteDirは省略）
npm run swizzle @docusaurus/theme-classic Footer -- --eject
```

The swizzle CLI is interactive and will guide you through the whole [swizzle process](./swizzling.mdx).

#### Options {#options-swizzle}

| 名前              | 説明                                                                          |
| --------------- | --------------------------------------------------------------------------- |
| `themeName`     | スウィズリング元のテーマ名                                                               |
| `componentName` | スウィズリング対象のテーマコンポーネント名                                                       |
| `--list`        | スウィズリング可能なコンポーネントを一覧表示                                                      |
| `--eject`       | [Eject](./swizzling.mdx#ejecting) the theme component                       |
| `--wrap`        | [Wrap](./swizzling.mdx#wrapping) the theme component                        |
| `--danger`      | Allow immediate swizzling of unsafe components                              |
| `--typescript`  | Swizzle the TypeScript variant component                                    |
| `--config`      | Path to docusaurus config file, default to `[siteDir]/docusaurus.config.js` |

:::warning

安全でないコンポーネントは、内部のリファクタリングによって破壊的変更の影響に晒される危険性が高いです。

:::

### `docusaurus deploy [siteDir]` {#docusaurus-deploy-sitedir}

Deploys your site with [GitHub Pages](https://pages.github.com/). Check out the docs on [deployment](deployment.mdx#deploying-to-github-pages) for more details.

#### Options {#options-3}

| 名前             | Default     | 説明                                                                                        |
| -------------- | ----------- | ----------------------------------------------------------------------------------------- |
| `--out-dir`    | `build`     | 現在のワークスペースからの相対パスで、新しい出力ディレクトリのフルパスです。                                                    |
| `--skip-build` | `false`     | Deploy website without building it. This may be useful when using a custom deploy script. |
| `--config`     | `undefined` | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`               |

### `docusaurus serve [siteDir]` {#docusaurus-serve-sitedir}

Serve your built website locally.

| 名前          | Default                       | 説明                                                                                                              |
| ----------- | ----------------------------- | --------------------------------------------------------------------------------------------------------------- |
| `--port`    | `3000`                        | Use specified port                                                                                              |
| `--dir`     | `build`                       | The full path for the output directory, relative to the current workspace                                       |
| `--build`   | `false`                       | Build website before serving                                                                                    |
| `--config`  | `undefined`                   | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                                     |
| `--host`    | `localhost`                   | 使用するホスト名を指定します。 For example, if you want your server to be accessible externally, you can use `--host 0.0.0.0`. |
| `--no-open` | `false` locally, `true` in CI | Do not open a browser window to the server location.                                                            |

### `docusaurus clear [siteDir]` {#docusaurus-clear-sitedir}

Clear a Docusaurus site's generated assets, caches, build artifacts.

We recommend running this command before reporting bugs, after upgrading versions, or anytime you have issues with your Docusaurus site.

### `docusaurus write-translations [siteDir]` {#docusaurus-write-translations-sitedir}

Write the JSON translation files that you will have to translate.

By default, the files are written in `website/i18n/<defaultLocale>/...`.

| 名前                | Default           | 説明                                                                                             |
| ----------------- | ----------------- | ---------------------------------------------------------------------------------------------- |
| `--locale`        | `<defaultLocale>` | Define which locale folder you want to write translations the JSON files in                    |
| `--override`      | `false`           | Override existing translation messages                                                         |
| `--config`        | `undefined`       | Path to Docusaurus config file, default to `[siteDir]/docusaurus.config.js`                    |
| `--messagePrefix` | `''`              | Allows adding a prefix to each translation message, to help you highlight untranslated strings |

### `docusaurus write-heading-ids [siteDir] [files]` {#docusaurus-write-heading-ids-sitedir}

Add [explicit heading IDs](./guides/markdown-features/markdown-features-toc.mdx#heading-ids) to the Markdown documents of your site.

| 名前                | Default                      | 説明                                                       |
| ----------------- | ---------------------------- | -------------------------------------------------------- |
| `files`           | All MD files used by plugins | The files that you want heading IDs to be written to.    |
| `--maintain-case` | `false`                      | Keep the headings' casing, otherwise make all lowercase. |
| `--overwrite`     | `false`                      | Overwrite existing heading IDs.                          |
